--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,14 @@ project(test_project C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
-add_executable(test
-    test.c
+add_executable(main
+    main.cpp
+    servo.cpp
+    proximity_sensor.cpp
 )
-pico_enable_stdio_usb(test 1)
-pico_enable_stdio_uart(test 0)
+pico_enable_stdio_usb(main 1)
+pico_enable_stdio_uart(main 0)
 
-pico_add_extra_outputs(test)
+pico_add_extra_outputs(main)
 
-target_link_libraries(test pico_stdlib)
+target_link_libraries(main pico_stdlib)
