--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,7 @@ project(test_project C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
-add_executable(main
-    main.cpp
-    servo.cpp
-    proximity_sensor.cpp
-)
-pico_enable_stdio_usb(main 1)
-pico_enable_stdio_uart(main 0)
 
-pico_add_extra_outputs(main)
+add_subdirectory(src)
+add_subdirectory(test)
 
-target_link_libraries(main pico_stdlib)
